tests/ui/feature-gates/feature-gate-offset-of-enum.stderr
error[E0573]: expected type, found variant `Alpha::One`
  --> $DIR/feature-gate-offset-of-enum.rs:11:16
   |
LL |     offset_of!(Alpha::One, 0);
   |                ^^^^^^^^^^
   |                |
   |                not a type
   |                help: try using the variant's enum: `Alpha`

error[E0658]: using enums in offset_of is experimental
  --> $DIR/feature-gate-offset-of-enum.rs:12:23
   |
LL |     offset_of!(Alpha, One);
   |                       ^^^
   |
   = note: see issue #106655 <https://github.com/rust-lang/rust/issues/106655> for more information
   = help: add `#![feature(offset_of_enum)]` to the crate attributes to enable

error[E0795]: `One` is an enum variant; expected field at end of `offset_of`
  --> $DIR/feature-gate-offset-of-enum.rs:12:23
   |
LL |     offset_of!(Alpha, One);
   |                       ^^^ enum variant

error[E0658]: using enums in offset_of is experimental
  --> $DIR/feature-gate-offset-of-enum.rs:14:23
   |
LL |     offset_of!(Alpha, Two.0);
   |                       ^^^
   |
   = note: see issue #106655 <https://github.com/rust-lang/rust/issues/106655> for more information
   = help: add `#![feature(offset_of_enum)]` to the crate attributes to enable

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0573, E0658, E0795.
For more information about an error, try `rustc --explain E0573`.
